--- a/app/javascript/scss/application.scss
+++ b/app/javascript/scss/application.scss
@@ -1,2 +1,8 @@
 @import '~bootstrap/scss/bootstrap';
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
+
+
+.logo {
+  font-family: Georgia, serif;
+  font-size: 2rem;
+}
