--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,12 @@
       <%= render "shared/header" %>
       <div class="container mb-5">
         <div class="row">
-    <%= yield %>
+          <div class="col-md-12">
+            <%= render "shared/flash" %>
+          </div>
+        </div>
+      <div class="row">
+        <%= yield %>
       </div>
     </div>
     <%= render "shared/footer" %>
