--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,16 +2,32 @@
   <div class="card mb-3">
     <div class="row no-gutters">
       <div class="col-lg-7">
-        <% if @post.image.attached? %>
-          <%= image_tag @post.image.variant(resize_to_fill: [800, 800]).processed, class: "card-img" %>
-        <% else %>
-          <%= image_tag "no_image", class: "card-img" %>
-        <% end %>
       </div>
       <div class="col-lg-5">
         <div class="card-body scroll">
           <%= simple_format (@post.caption) %>
         </div>
+      </div>
+    </div>
+  </div>
+  <p>
+    <%= link_to "編集", edit_post_path(@post), class: "btn btn-block btn-primary" %>
+  </p>
+
+</div>
+
+<div class="modal fade" id="delete-post">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">投稿削除</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
+        <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-danger" %>
       </div>
     </div>
   </div>
