add delete model

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,5 @@
 <div class="col-6 mx-auto">
   <% @posts.each do |post| %>
-      <div class="card-text">
-        <p><%= truncate(post.caption, length: 90) %></p>
-      </div>
+    <%= render partial: "post", locals: { post: post } %>
   <% end %>
 </div>
