--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,19 +16,4 @@
 
 </div>
 
-<div class="modal fade" id="delete-post">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">投稿削除</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">キャンセル</button>
-        <%= link_to "削除", post_path(@post), method: :delete, class: "btn btn-danger" %>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "delete_modal" , post: @post %>
