--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,5 +11,17 @@
     <li class="nav-item">
       <a class="nav-link" href="/"><i class="far fa-user"></i></a>
     </li>
+    
+    <li class="nav-item">
+      <%= link_to new_researcher_path, class: "nav-link" do %>
+        <i class="far fa-plus-square"></i>
+      <% end %>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/researchers/search"><i class="far fa-user"></i></a>
+    </li>
+
+</li>
+    
   </ul>
 </nav>
